--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 
 
-<div style="padding:100px; margin-top:50px; height:650px;">
+<div style="padding:100px; margin-top:50px; height:150%;">
 <body background="toronto1.png">
 
 <!–Main->
