--- a/civ102.html
+++ b/civ102.html
@@ -14,12 +14,12 @@
 
 </head>
 
-<!–Menu ->
+<!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: black; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: black; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: black; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -34,7 +34,7 @@
     </div>
   </div> 
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: black; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -48,23 +48,35 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: black; text-decoration: none; padding: 15px 15px">Overview</a></div>
-  <div class="button"><a href="index.html" style="color: black; text-decoration: none; padding: 15px 15px">Home</a></div>
-  <div class="logo">
-  	<a href="index.html"><img src="logo.jpg" alt="logo" style="width:80px;border:0"></a>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="index.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Home</a></div>
+  <div class="logo"><h1 style="margin:1px;">
+  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
 
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
+<body style="background-color: #ccccff;">
 
-<body style="background-color: #ccccff;padding:100px; margin-top:50px; height:650px">
+
 
 <!–Main->
 <title>CIV102 - Bill Sun</title>
 </head>
 
+<!-Table of Contents->
+<div id="toc_container">
+  <p class="toc_title">Table of Contents</p>
+  <ul class="toc_list">
+  <li><a href="#1">Designing a pedestrian truss bridge</a></li>
+  <li><a href="#2">Designing and building a matboard bridge</a></li>
+</ul>
+</div>
+
 <h1>CIV102 - Structures and Materials</h1>
 <h3>University of Toronto</h3>
 <h4>Instructor: <a href="http://www.provost.utoronto.ca/awards/uprofessors/complete/Professor_Michael_P__Collins.html">Prof. Michael P. Collins</a></h4><br>
+
 
 <p>This course is often regarded as the most challenging course in first-year Engineering Science at University of Toronto, featuring the world-renowned structural engineer, Professor Michael P. Collins. Students are taught concepts that are normally taught in third-year Civil Engineering, and have to complete two bridge design projects through the term.</p>
 
@@ -132,10 +144,7 @@
 
 <div class="footer">
 <br>                                   
-<form class="example" action="search.html" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search..." name="search">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
+
 
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
