--- a/clubs.html
+++ b/clubs.html
@@ -18,12 +18,12 @@
 
 </head>
 
-<!–Menu ->
+<!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: black; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: black; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: black; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -38,7 +38,7 @@
     </div>
   </div> 
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: black; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -52,15 +52,15 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: black; text-decoration: none; padding: 15px 15px">Overview</a></div>
-  <div class="button"><a href="index.html" style="color: black; text-decoration: none; padding: 15px 15px">Home</a></div>
-  <div class="logo">
-  	<a href="index.html"><img src="logo.jpg" alt="logo" style="width:80px;border:0"></a>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="index.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Home</a></div>
+  <div class="logo"><h1 style="margin:1px;">
+  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
 
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 
-<div style="padding: 100px; margin-top:50px; height:650px;">
 <body background = "background2.jpg">
 
 
@@ -70,7 +70,7 @@
 <h1>Extracurriculars Summary</h1><br>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="autodrive.jpg" alt="portfolio item" width=400></a>
+	<a href="autodrive.html" target="_blank"><img src="autodrive.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Autodrive Team</strong></font></p>
 	    <p><font color="white">University of Toronto</font></p>
@@ -78,7 +78,7 @@
     </figure>
 
     <figure class="item">
-    	<a href="research.html" target="_blank"><img src="solarcar.jpg" alt="portfolio item" width=400></a>
+    	<a href="solarcar.html" target="_blank"><img src="solarcar.jpg" alt="portfolio item" width=400 height=250></a>
     	<figcaption class= "desc">
 	    <p><font color="white"><strong>Solar Car Racing Team</strong></font></p>
 	    <p><font color="white">University of Toronto</font></p>
@@ -86,7 +86,7 @@
     </figure>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="ewb.jpg" alt="portfolio item" width=400></a>
+	<a href="ewb.html" target="_blank"><img src="ewb.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Engineers Without Borders</strong></font></p>
 	    <p><font color="white">Youth Engagement Portfolio, University of Toronto Chapter</font></p>
@@ -94,7 +94,7 @@
     </figure>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="thegame.jpg" alt="portfolio item" width=450></a>
+	<a href="ilead.html" target="_blank"><img src="thegame.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Improving Bike Theft Awareness</strong></font></p>
 	    <p><font color="white">Institute for Leadership Education in Engineering, <i>The Game</i> Program, University of Toronto</font></p>
@@ -102,7 +102,7 @@
     </figure>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="Logo 2.png" alt="portfolio item" width=350></a>
+	<a href="fes.html" target="_blank"><img src="Logo 2.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Future Engineers Society</strong></font></p>
 	    <p><font color="white">Earl Haig Secondary School</font></p>
@@ -110,7 +110,7 @@
     </figure>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="el-nino.jpg" alt="portfolio item" width=400></a>
+	<a href="weather.html" target="_blank"><img src="el-nino.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Earth Sciences Hobby Research</strong></font></p>
 	    <p><font color="white">Personal Hobby Project</font></p>
@@ -124,10 +124,7 @@
 
 <div class="footer">
 <br>                                   
-<form class="example" action="search.html" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search..." name="search">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
+
 
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
