--- a/ewb.html
+++ b/ewb.html
@@ -8,18 +8,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
+	<meta name="keywords" content="Bill,Sun,Bill Sun,Sun Bill,Sun Yuan,Sun Yuan Hong,Bill Yuan,Yuan Sun,Yuan Hong Sun,Bill Yuan Sun,Bill Yuan Hong Sun,Programming,Website,Portfolio">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
 
-
 </head>
 
-<!–Menu ->
+<!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: black; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: black; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: black; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -34,7 +34,7 @@
     </div>
   </div> 
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: black; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -48,15 +48,16 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: black; text-decoration: none; padding: 15px 15px">Overview</a></div>
-  <div class="button"><a href="index.html" style="color: black; text-decoration: none; padding: 15px 15px">Home</a></div>
-  <div class="logo">
-  	<a href="index.html"><img src="logo.jpg" alt="logo" style="width:80px;border:0"></a>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="index.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Home</a></div>
+  <div class="logo"><h1 style="margin:1px;">
+  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
 
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 
-<body style="background-color:#ffb366;padding:100px; margin-top:50px; height:650px;">
+<body style="background-color:#ccccff;">
 
 <!–Main->
 <title>EWB - Bill Sun</title>
@@ -67,7 +68,9 @@
 <h3>University of Toronto Chapter</h3><br>
 
 <h2>Youth Engagement Portfolio</h2>
-<p>I have became a part of Engineers Without Borders, University of Toronto chapter since the beginning of first year. I chose to join the Youth Engagement portfolio since it serves a mission of helping younger students develop engineering design skills to make social change. Through this experience, I believe that I am also making social change. I strongly believe that as a professional engineer, it is my mission to serve the community and help make a difference.</p>
+<p>During first year (2016-2017), I was a part of Engineers Without Borders, University of Toronto chapter, in the Youth Engagement portfolio. </p>
+
+<p>I joined since it serves a mission of helping younger students develop engineering design skills to make social change. Through this experience, I believe that I am also making social change. I strongly believe that as a professional engineer, it is my mission to serve the community and help make a difference.</p>
 
 <img src="copy-of-logo-ye.png" alt="logo" style="width:20%;border:0;">
 
@@ -96,15 +99,11 @@
 <p><a href="https://www.ewb.ca/en/">EWB Canada</a></p>
 <p><a href="https://utoronto.ewb.ca/en/">EWB U of T Chapter</a></p>
 <p><a href="https://ewbuoftyouth.weebly.com/">U of T EWB Youth Engagement</a></p>
-<br><br>
+<br><br><br>
 
 
 <div class="footer">
 <br>                                   
-<form class="example" action="search.html" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search..." name="search">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
 
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
