--- a/ilead.html
+++ b/ilead.html
@@ -11,15 +11,13 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
 
-
 </head>
-
-<!–Menu ->
+<!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: black; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: black; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: black; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -34,7 +32,7 @@
     </div>
   </div> 
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: black; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -48,16 +46,17 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: black; text-decoration: none; padding: 15px 15px">Overview</a></div>
-  <div class="button"><a href="index.html" style="color: black; text-decoration: none; padding: 15px 15px">Home</a></div>
-  <div class="logo">
-  	<a href="index.html"><img src="logo.jpg" alt="logo" style="width:80px;border:0"></a>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="index.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Home</a></div>
+  <div class="logo"><h1 style="margin:1px;">
+  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
 
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
+<body style="background-color:#ccccff;">
 
-<div style="padding:100px; margin-top:50px; height:650px;">
-<body background="toronto1.png">
+
 
 <!–Main->
 <title>iLead The Game - Bill Sun</title>
@@ -66,20 +65,28 @@
 <h1>Improving Bike Theft Awareness on Campus</h1>
 <h3>Institute for Leadership Education in Engineering (iLead), <i>The Game</i> Program, University of Toronto</h3><br>
 
+<img src="ILead.png" alt="portfolio item" width=400 style="float:right;margin:25px;">
+
+<p>During my second year (2017-2018), I participated in iLead's <i>The Game</i> program, a platform where teams use the engineering approach to resolve social issues. </p>
+
+<p>My team worked on the issue of bike theft in Toronto, by aiming to reduce the number of bike thefts. At first, we made several surveys in cycling focus groups to find out the root causes. These included the lack of police enforecement, lack of general awareness, and not enough technology to track bikes. We initially designed a mobile app and tag system, only to find out that a reference design (<a href="https://project529.com/garage">Project 529</a>) is being planned to be implemented in Toronto by an organization called <a href="https://www.cycleto.ca//">Cycle Toronto</a>, after meeting with their representatives. </p>
+
+<p>As a result, my team narrowed down on increasing awareness on bike theft, which led to the manufacturing of a sign and poster box stand for displaying our poster, as well as information cards to inform cyclists about secure bike-locking methods. This system was put on trial on campus and had some success. If continued, we could partner with Cycle Toronto and develop a larger awareness campaign. </p>
+
+<p>My team's final presentation can be seen <a href="https://docs.google.com/presentation/d/17z1L7veRwuF6ZbfExn7Rh8BuMlSWBM2HDAfkJXiTK1Q/edit?usp=sharing">here</a>.</p>
+
+<img src="thegame.jpg" alt="portfolio item" width=80%>
 
 
-
-</div>
-
+<h3>Links</h3>
+<p><a href="http://ilead.engineering.utoronto.ca/">Institute for Leadership Education in Engineering (iLead)</a></p>
+<p><a href="http://ilead.engineering.utoronto.ca/events-programs/the-game/"><i>The Game</i> Program</a></p>
+<br><br><br>
 
 
 
 <div class="footer">
 <br>                                   
-<form class="example" action="search.html" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search..." name="search">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
 
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
