--- a/overview.html
+++ b/overview.html
@@ -2,11 +2,6 @@
 <html lang="en">
 <head>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-
 <!–Website Information ->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,37 +13,13 @@
 
 </head>
 
-<style>
-#toc_container {
-    float: right;
-    position: relative;
-    right: 150px;
-    margin: 25px;
-    background: #f9f9f9 none repeat scroll 0 0;
-    border: 1px solid #aaa;
-    display: table;
-    font-size: 95%;
-    margin-bottom: 1em;
-    padding: 20px;
-    width: auto;
-}
 
-.toc_title {
-    font-weight: 700;
-    text-align: center;
-}
-
-#toc_container li, #toc_container ul, #toc_container ul li{
-    list-style: outside none none !important;
-}
-</style>
-
-<!–Menu ->
+<!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: black; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: black; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: black; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -63,7 +34,7 @@
     </div>
   </div> 
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: black; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -77,15 +48,15 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: black; text-decoration: none; padding: 15px 15px">Overview</a></div>
-  <div class="button"><a href="index.html" style="color: black; text-decoration: none; padding: 15px 15px">Home</a></div>
-  <div class="logo">
-  	<a href="index.html"><img src="logo.jpg" alt="logo" style="width:80px;border:0"></a>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="index.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Home</a></div>
+  <div class="logo"><h1 style="margin:1px;">
+  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
 
-
-<body style="background-color:#ccccff;padding:100px;margin-top:50px; height:650px;">
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:2000px;">
+<body style="background-color:#ccccff;">
 
 <!–Main->
 <title>Overview - Bill Sun</title>
@@ -156,7 +127,7 @@ box{
 <h2 id="exp">Experience Highlight</h2>
 
     <figure class="item">
-    	<a href="research.html" target="_blank"><img src="transit2.png" alt="portfolio item" width=400></a>
+    	<a href="research.html" target="_blank"><img src="transit2.png" alt="portfolio item" width=400 height=250></a>
     	<figcaption class= "desc">
 	    <p><font color="white"><strong>Transit Modelling Research</strong></font></p>
 	    <p><font color="white">University of Toronto Transportation Research Institute, Summer 2017</font></p>
@@ -164,7 +135,7 @@ box{
     </figure>
 
     <figure class="item">
-	<a href="app.html" target="_blank"><img src="placeholder.png" alt="portfolio item" width=400></a>
+	<a href="app.html" target="_blank"><img src="chinabridge.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Content Hosting Application</strong></font></p>
 	    <p><font color="white">Toronto Chinese Gospel Church</font></p>
@@ -172,7 +143,15 @@ box{
     </figure>
 
     <figure class="item">
-	<a href="parking.html" target="_blank"><img src="parking1.png" alt="portfolio item" width=400></a>
+	<a href="boxhead.html" target="_blank"><img src="game1.png" alt="portfolio item" width=400 height=250></a>
+	<figcaption class= "desc">
+	    <p><font color="white"><strong>Boxhead Video Game</strong></font></p>
+	    <p><font color="white">ICS3U-Computer Programming, Earl Haig Secondary School</font></p>
+	</figcaption>
+    </figure>
+
+    <figure class="item">
+	<a href="parking.html" target="_blank"><img src="parking1.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Parking Manager Application Simulator</strong></font></p>
 	    <p><font color="white">ICS4U-Computer Programming, Earl Haig Secondary School</font></p>
@@ -180,7 +159,7 @@ box{
     </figure>
 
     <figure class="item">
-	<a href="autodrive.html" target="_blank"><img src="placeholder.png" alt="portfolio item" width=400></a>
+	<a href="autodrive.html" target="_blank"><img src="autodrive.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Autodrive Team</strong></font></p>
 	    <p><font color="white">University of Toronto</font></p>
@@ -188,20 +167,13 @@ box{
     </figure>
 
     <figure class="item">
-	<a href="aer201.html" target="_blank"><img src="aer2011.png" alt="portfolio item" width=400></a>
+	<a href="aer201.html" target="_blank"><img src="aer2011.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Pill Packaging Machine</strong></font></p>
 	    <p><font color="white">AER201—Engineering Design, University of Toronto</font></p>
 	</figcaption>
     </figure>
 
-    <figure class="item">
-	<a href="praxis.html#praxis2" target="_blank"><img src="praxis2.png" alt="portfolio item" width=500></a>
-	<figcaption class= "desc">
-	    <p><font color="white"><strong>Improving Fabric Rolling at <i>G&S Dye</i></strong></font></p>
-	    <p><font color="white">ESC102—Praxis II, University of Toronto</font></p>
-	</figcaption>
-    </figure>
 
 <p>Click the images to view the details for each project.</p> 
 <p>A more detailed showcase of all my projects and extracurriculars can be accessed from the menu above.</p>
@@ -244,10 +216,6 @@ box{
 
 <div class="footer">
 <br>                                   
-<form class="example" action="search.html" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search..." name="search">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
 
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font></font>
 
