--- a/solarcar.html
+++ b/solarcar.html
@@ -8,18 +8,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
+	<meta name="keywords" content="Bill,Sun,Bill Sun,Sun Bill,Sun Yuan,Sun Yuan Hong,Bill Yuan,Yuan Sun,Yuan Hong Sun,Bill Yuan Sun,Bill Yuan Hong Sun,Programming,Website,Portfolio">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
 
-
 </head>
 
-<!–Menu ->
+<!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: black; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: black; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: black; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -34,7 +34,7 @@
     </div>
   </div> 
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: black; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -48,15 +48,15 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: black; text-decoration: none; padding: 15px 15px">Overview</a></div>
-  <div class="button"><a href="index.html" style="color: black; text-decoration: none; padding: 15px 15px">Home</a></div>
-  <div class="logo">
-  	<a href="index.html"><img src="logo.jpg" alt="logo" style="width:80px;border:0"></a>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="index.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Home</a></div>
+  <div class="logo"><h1 style="margin:1px;">
+  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
 
-
-<body style="background-color: #ccccff;padding:100px; margin-top:50px; height:650px">
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
+<body style="background-color: #ccccff;">
 
 <!–Main->
 <title>Solar Car Team - Bill Sun</title>
@@ -65,19 +65,18 @@
 <h1>Blue Sky Solar Car Racing Team</h1>
 <h3>University of Toronto</h3><br>
 
+<p><a href="http://blueskysolar.utoronto.ca/">Team Page</a></p>
+
+<p>During the summer of 2017, I was a part of the Blue Sky Solar Power Vehicle Team, where a solar powered car named <i>Polaris</i> was designed and built to participate in the <a href="https://www.worldsolarchallenge.org/dashboard/galleries">Bridgestone World Solar Challenge</a>. The team ultimately finished 11th place overall.</p>
+
+<p>I participated in the fabrication of electrical and mechanical parts, including the main cover of the vehicle consisting of the solar panels, and the battery packages. </p>  
+
 
 <img src="solarcar2.jpg" alt="2" style="width:70%;margin:10px;">
-
-
-
-
+<br><br><br>
 
 <div class="footer">
 <br>                                   
-<form class="example" action="search.html" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search..." name="search">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
 
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
