--- a/praxis.html
+++ b/praxis.html
@@ -11,37 +11,14 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
 
-
 </head>
-<style>
-#toc_container {
-    float: right;
-    margin: 40px;
-    background: #f9f9f9 none repeat scroll 0 0;
-    border: 1px solid #aaa;
-    display: table;
-    font-size: 95%;
-    margin-bottom: 1em;
-    padding: 20px;
-    width: auto;
-}
 
-.toc_title {
-    font-weight: 700;
-    text-align: center;
-}
-
-#toc_container li, #toc_container ul, #toc_container ul li{
-    list-style: outside none none !important;
-}
-</style>
-
-<!–Menu ->
+<!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: black; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: black; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: black; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -56,7 +33,7 @@
     </div>
   </div> 
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: black; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -70,15 +47,15 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: black; text-decoration: none; padding: 15px 15px">Overview</a></div>
-  <div class="button"><a href="index.html" style="color: black; text-decoration: none; padding: 15px 15px">Home</a></div>
-  <div class="logo">
-  	<a href="index.html"><img src="logo.jpg" alt="logo" style="width:80px;border:0"></a>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="index.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Home</a></div>
+  <div class="logo"><h1 style="margin:1px;">
+  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
 
-
-<body style="background-color: #ccccff;padding:100px; margin-top:50px; height:650px">
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
+<body style="background-color: #ccccff;">
 
 <!–Main->
 <title>Praxis - Bill Sun</title>
@@ -242,10 +219,6 @@
 
 <div class="footer">
 <br>                                   
-<form class="example" action="search.html" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search..." name="search">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
 
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font></font>
 
