--- a/projects.html
+++ b/projects.html
@@ -7,20 +7,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Bill Sun - Overview">
+	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
+	<meta name="keywords" content="Bill,Sun,Bill Sun,Sun Bill,Sun Yuan,Sun Yuan Hong,Bill Yuan,Yuan Sun,Yuan Hong Sun,Bill Yuan Sun,Bill Yuan Hong Sun,Programming,Website,Portfolio">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
 
 </head>
 
-
-<!–Menu ->
+<!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: black; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: black; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: black; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -35,7 +35,7 @@
     </div>
   </div> 
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: black; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -49,15 +49,14 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: black; text-decoration: none; padding: 15px 15px">Overview</a></div>
-  <div class="button"><a href="index.html" style="color: black; text-decoration: none; padding: 15px 15px">Home</a></div>
-  <div class="logo">
-  	<a href="index.html"><img src="logo.jpg" alt="logo" style="width:80px;border:0"></a>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="index.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Home</a></div>
+  <div class="logo"><h1 style="margin:1px;">
+  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
 
-
-<div style="padding: 100px; margin-top:50px; height:650px;">
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 <body background = "background3.jpg">
 
 
@@ -67,7 +66,7 @@
 <h1>Projects Summary</h1><br>
 
     <figure class="item">
-    	<a href="research.html" target="_blank"><img src="transit2.png" alt="portfolio item" width=400></a>
+    	<a href="research.html" target="_blank"><img src="transit2.png" alt="portfolio item" width=400 height=250></a>
     	<figcaption class= "desc">
 	    <p><font color="white"><strong>Transit Modelling Research</strong></font></p>
 	    <p><font color="white">University of Toronto Transportation Research Institute, Summer 2017</font></p>
@@ -75,7 +74,7 @@
     </figure>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="placeholder.png" alt="portfolio item" width=400></a>
+	<a href="app.html" target="_blank"><img src="chinabridge.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Content Hosting / Streaming Application</strong></font></p>
 	    <p><font color="white">Toronto Chinese Gospel Church</font></p>
@@ -83,7 +82,7 @@
     </figure>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="placeholder.png" alt="portfolio item" width=400></a>
+	<a href="mi.html" target="_blank"><img src="placeholder.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Machine Learning Project</strong></font></p>
 	    <p><font color="white"></font></p>
@@ -91,7 +90,15 @@
     </figure>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="parking1.png" alt="portfolio item" width=400></a>
+	<a href="boxhead.html" target="_blank"><img src="game1.png" alt="portfolio item" width=400 height=250></a>
+	<figcaption class= "desc">
+	    <p><font color="white"><strong>Boxhead Video Game</strong></font></p>
+	    <p><font color="white">ICS3U-Computer Programming, Earl Haig Secondary School</font></p>
+	</figcaption>
+    </figure>
+
+    <figure class="item">
+	<a href="parking.html" target="_blank"><img src="parking1.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Parking Manager Application Simulator</strong></font></p>
 	    <p><font color="white">ICS4U-Computer Programming, Earl Haig Secondary School</font></p>
@@ -99,20 +106,13 @@
     </figure>
 
     <figure class="item">
-	<a href="________.html" target="_blank"><img src="aer2011.png" alt="portfolio item" width=400></a>
+	<a href="aer201.html" target="_blank"><img src="aer2011.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Pill Packaging Machine</strong></font></p>
 	    <p><font color="white">AER201—Engineering Design, University of Toronto</font></p>
 	</figcaption>
     </figure>
 
-    <figure class="item">
-	<a href="________.html" target="_blank"><img src="praxis2.png" alt="portfolio item" width=500></a>
-	<figcaption class= "desc">
-	    <p><font color="white"><strong>Improving Fabric Rolling at <i>G&S Dye</i></strong></font></p>
-	    <p><font color="white">ESC102—Praxis II, University of Toronto</font></p>
-	</figcaption>
-    </figure>
 
 <p>Click the images to view the details for each project.</p> 
 <br><br>
@@ -120,10 +120,6 @@
 
 <div class="footer">
 <br>                                   
-<form class="example" action="search.html" style="margin:auto;max-width:300px">
-  <input type="text" placeholder="Search..." name="search">
-  <button type="submit"><i class="fa fa-search"></i></button>
-</form>
 
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
